# Modular-Reasoning-Framework-MRF

./: README.md  mrf.py  mrf_v1.1.py  pyproject.toml  requirements.txt
