[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrf"
version = "1.1.0"
description = "Modular Reasoning Framework - External reasoning orchestration for fast LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hiro", email = "hiro@example.com"},
]
keywords = ["llm", "reasoning", "chain-of-thought", "ai", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.3"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
all = [
    "google-generativeai>=0.3",
    "openai>=1.0",
    "anthropic>=0.18",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/mrf"
Repository = "https://github.com/YOUR_USERNAME/mrf"
Documentation = "https://github.com/YOUR_USERNAME/mrf#readme"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
